# recursive-file-loader

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release-plz.yaml
src/: canonical_path.rs  dependency_path.rs  includes.rs  lib.rs  loader.rs
