[package]
name = "recursive-file-loader"
version = "0.1.0"
edition = "2021"
authors = ["René Perschon <rperschon85@gmail.com>"]
license = "MIT"
description = "Library to recursively load files via references in the files"
homepage = "https://github.com/Leopard2A5/recursive-file-loader"
documentation = "https://github.com/Leopard2A5/recursive-file-loader"
repository = "https://github.com/Leopard2A5/recursive-file-loader"
readme = "../README.md"

[dependencies]
thiserror = "1.0.49"
