[package]
name = "recursive-file-loader"
version = "1.0.1"
edition = "2021"
authors = ["René Perschon <rperschon85@gmail.com>"]
license = "MIT"
description = "Library to recursively load files via references in the files"
homepage = "https://github.com/Leopard2A5/recursive-file-loader"
documentation = "https://github.com/Leopard2A5/recursive-file-loader"
repository = "https://github.com/Leopard2A5/recursive-file-loader"
readme = "README.md"

[dependencies]
lazy-regex = "3.0.2"
thiserror = "1.0.49"

[dev-dependencies]
indoc = "2.0.4"
rstest = "0.18.2"
temp-dir = "0.1.11"
